--- a/myst.yml
+++ b/myst.yml
@@ -11,5 +11,5 @@ project:
 site:
   template: book-theme
   options:
-    favicon: favicon.ico
-    logo: site_logo.png
+    favicon: support/favicon.ico
+    logo: support/site_logo.png
